<resources>

    <!-- Общее -->
    <string name="app_name">YouAchieve</string>

    <string name="icon">Иконка</string>
    <string name="avatar">Аватарка</string>
    <string name="cover">Обложка</string>
    <string name="delete">Удалить</string>
    <string name="ok">Подтвердить</string>

    <string name="other">Прочее</string>
    <string name="menu">Меню</string>
    <string name="cancel">Назад</string>

    <string name="loading">🔄 Загрузка…</string>
    <string name="error_load">⚠ Ошибка загрузки</string>
    <string name="empty">- Пусто -</string>
    <string name="value_not_set">не задано</string>


    <!-- Главная навигация -->
    <string name="main_section_home">Главная</string>
    <string name="main_section_messenger">Мессенджер</string>
    <string name="main_section_workspace">Рабочее</string>
    <string name="main_section_services">Сервисы</string>
    <string name="main_section_settings">Настройки</string>


    <!-- Рабочее пространство: основное -->
    <string name="workspace_section">Раздел</string>
    <string name="workspace_all">Все пространства</string>

    <string name="workspace_view_list">Список</string>
    <string name="workspace_view_kanban">Канбан</string>
    <string name="workspace_view_calendar">Календарь</string>
    <string name="workspace_view_table">Таблица</string>

    <string name="workspace_section_workspaces">Пространства</string>
    <string name="workspace_section_projects">Проекты</string>
    <string name="workspace_section_tasks">Задачи</string>
    <string name="workspace_section_users">Участники</string>
    <string name="workspace_section_actions">Действия</string>

    <string name="workspace_add_button">Добавить рабочую сущность</string>
    <string name="workspace_add_workspace">🖥️  Пространство</string>
    <string name="workspace_add_project">📋  Проект</string>
    <string name="workspace_add_task">✅  Задача</string>

    <string name="workspace_list_is_empty">Вы не состоите ни в одном рабочем пространстве</string>
    <string name="project_list_is_empty">Проектов нет</string>
    <string name="task_list_is_empty">Задач нет</string>

    <string name="workspace">Пространство</string>
    <string name="project">Проект</string>
    <string name="task">Задача</string>


    <!-- Работа с сущностями рабочего пространства -->
    <string name="create_workspace_header">Создание пространства</string>
    <string name="create_project_header">Создание проекта</string>
    <string name="create_task_header">Создание задачи</string>

    <string name="is_private">Приватный</string>
    <string name="button_add_cover">Добавить обложку</string>
    <string name="button_change_cover">Изменить обложку</string>
    <string name="datetime_begin">Начало:</string>
    <string name="datetime_end">Срок выполнения:</string>


    <!-- Подсказки в формах ввода -->
    <string name="hint_workspace_name">Название пространства</string>
    <string name="hint_project_name">Название проекта</string>
    <string name="hint_task_name">Название задачи</string>
    <string name="hint_description">Описание</string>
    <string name="hint_workspace_private">Приватные рабочие пространства видны только их участникам, их не увидят посторонние пользователи</string>

    <string name="hint_workspace_description">Добавьте описание пространства</string>
    <string name="hint_project_description">Добавьте описание проекта</string>
    <string name="hint_task_description">Добавьте описание задачи</string>

    <!-- Ошибки в формах ввода -->
    <string name="error_workspace_no_name">Название пространства не может быть пустым</string>
    <string name="error_project_no_name">Название проекта не может быть пустым</string>
    <string name="error_project_no_workspace">Проект не может сущестовать вне пространства</string>
    <string name="error_task_no_name">Название задачи не может быть пустым</string>
    <string name="error_task_no_workspace">Задача не может сущестовать вне пространства</string>
    <string name="error_task_no_project">Задача не может сущестовать вне проекта</string>

    <!-- Вспомогательное -->
    <string name="in">в</string>


    <!-- Месяцы -->
    <string name="january">янв</string>
    <string name="february">фев</string>
    <string name="march">мар</string>
    <string name="april">апр</string>
    <string name="may">май</string>
    <string name="june">июн</string>
    <string name="july">июл</string>
    <string name="august">авг</string>
    <string name="september">сен</string>
    <string name="october">окт</string>
    <string name="november">ноя</string>
    <string name="december">дек</string>


    <!-- Дата и время -->
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="tomorrow">Завтра</string>


</resources>